--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@prisma/client": "6.5.0",
     "@prisma/nuxt": "0.3.0",
     "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "next-auth": "~4.21.1",
+    "nodemailer": "^6.10.0",
     "nuxt": "^3.16.0",
     "nuxt-auth-utils": "0.5.16",
     "vue": "^3.5.13",
@@ -25,7 +27,9 @@
   "packageManager": "pnpm@9.8.0+sha512.8e4c3550fb500e808dbc30bb0ce4dd1eb614e30b1c55245f211591ec2cdf9c611cabd34e1364b42f564bd54b3945ed0f49d61d1bbf2ec9bd74b866fcdc723276",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.10",
+    "@types/nodemailer": "^6.4.17",
     "prisma": "6.5.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
