update env example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+DOMAIN="http://localhost:3000"
 DATABASE_URL="mysql://root:password@localhost:3306/academic_supervision_db"
 NUXT_SESSION_PASSWORD=QvBlTKRgAzbssnS07USI05WwLrzwlRW0
 OPEN_REQUEST_SUPERVISION=true
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_SECURE=false
+MAIL_USER=
+MAIL_PASSWORD=
+MAIL_FROM=`"Admin" <admin@stikes-pertamedika.ac.id>`
