--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@nuxt/ui": "3.0.0",
     "@nuxtjs/tailwindcss": "6.13.2",
-    "@prisma/client": "6.5.0",
+    "@prisma/client": "^6.5.0",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "next-auth": "~4.21.1",
@@ -29,7 +29,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.10",
     "@types/nodemailer": "^6.4.17",
-    "prisma": "6.5.0",
+    "prisma": "^6.5.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   },
